<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:baselineAligned="false"    android:orientation="vertical"    tools:context="ru.solandme.basketballcounter.MainActivity"    tools:layout_editor_absoluteX="0dp"    tools:layout_editor_absoluteY="81dp">    <EditText        android:id="@+id/teamNameOne"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="8dp"        android:inputType="text"        android:padding="@dimen/_8ssp"        android:selectAllOnFocus="true"        android:text="@string/team_a"        android:textAlignment="center"        android:textSize="@dimen/_18ssp"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toRightOf="@+id/view"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/scoreTeamOne"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="0dp"        android:gravity="center"        android:text="0"        android:textAlignment="center"        android:textSize="@dimen/_80ssp"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toLeftOf="@+id/view"        app:layout_constraintTop_toBottomOf="@+id/teamNameOne" />    <Button        android:id="@+id/btnPlusThreePointToTeamOne"        android:layout_width="0dp"        android:layout_height="48dp"        android:layout_marginEnd="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/_3_points"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toLeftOf="@+id/view"        app:layout_constraintTop_toBottomOf="@+id/btnPlusTwoPointToTeamTwo"        tools:layout_constraintLeft_creator="1"        tools:layout_constraintRight_creator="1" />    <Button        android:id="@+id/btnPlusTwoPointToTeamTwo"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="16dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/_2_points"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintLeft_toRightOf="@+id/view"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toBottomOf="@+id/scoreTeamTwo"        tools:layout_constraintLeft_creator="1"        tools:layout_constraintRight_creator="1" />    <Button        android:id="@+id/btnPlusOnePointToTeamOne"        android:layout_width="0dp"        android:layout_height="48dp"        android:layout_marginEnd="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/free_throw"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toLeftOf="@+id/view"        app:layout_constraintTop_toBottomOf="@+id/btnPlusThreePointToTeamOne"        tools:layout_constraintLeft_creator="1"        tools:layout_constraintRight_creator="1" />    <View        android:id="@+id/view"        android:layout_width="2dp"        android:layout_height="0dp"        android:layout_marginBottom="8dp"        android:layout_marginTop="8dp"        android:background="@android:color/darker_gray"        app:layout_constraintBottom_toTopOf="@+id/btnClearScore"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <EditText        android:id="@+id/teamNameTwo"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="8dp"        android:inputType="text"        android:padding="@dimen/_8ssp"        android:text="@string/team_b"        android:textAlignment="center"        android:textSize="@dimen/_18ssp"        app:layout_constraintBottom_toBottomOf="@+id/teamNameOne"        app:layout_constraintLeft_toLeftOf="@+id/view"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/scoreTeamTwo"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="0dp"        android:gravity="center"        android:text="0"        android:textAlignment="center"        android:textSize="@dimen/_80ssp"        app:layout_constraintLeft_toRightOf="@+id/view"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toBottomOf="@+id/teamNameTwo" />    <Button        android:id="@+id/btnPlusThreePointToTeamTwo"        android:layout_width="0dp"        android:layout_height="48dp"        android:layout_marginEnd="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/_3_points"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintLeft_toRightOf="@+id/view"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toBottomOf="@+id/btnPlusTwoPointToTeamOne" />    <Button        android:id="@+id/btnPlusTwoPointToTeamOne"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginEnd="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="16dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/_2_points"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toLeftOf="@+id/view"        app:layout_constraintTop_toBottomOf="@+id/scoreTeamOne" />    <Button        android:id="@+id/btnPlusOnePointToTeamTwo"        android:layout_width="0dp"        android:layout_height="48dp"        android:layout_marginEnd="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginStart="8dp"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/free_throw"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintLeft_toRightOf="@+id/view"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toBottomOf="@+id/btnPlusThreePointToTeamTwo" />    <Button        android:id="@+id/btnClearScore"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="8dp"        android:background="@color/colorPrimary"        android:onClick="onClickPlusBtn"        android:padding="@dimen/_6sdp"        android:text="@string/clear_score"        android:textColor="@android:color/white"        android:textSize="@dimen/_18ssp"        app:layout_constraintLeft_toRightOf="@+id/view"        app:layout_constraintRight_toRightOf="@+id/view"        app:layout_constraintTop_toBottomOf="@+id/btnPlusOnePointToTeamTwo" />    <TextView        android:id="@+id/gameTimer"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="8dp"        android:layout_marginLeft="8dp"        android:layout_marginRight="8dp"        android:layout_marginTop="8dp"        android:text="00:21:15"        android:textSize="@dimen/_18ssp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintLeft_toLeftOf="parent"        app:layout_constraintRight_toRightOf="parent"        app:layout_constraintTop_toBottomOf="@+id/btnClearScore" /></android.support.constraint.ConstraintLayout>